@@ -75,9 +75,11 @@ class SelectTest(SQLTest):
         self.runtest(select([table1, table2]), "SELECT mytable.myid, mytable.name, mytable.description, myothertable.otherid, \
 myothertable.othername FROM mytable, myothertable")
 
-    def testsubquery(self):
+    def testselectselect(self):
+        """tests placing select statements in the column clause of another select, for the
+        purposes of selecting from the exported columns of that select."""
         s = select([table1], table1.c.name == 'jack')
-        print [key for key in s.c.keys()]
+        #print [key for key in s.c.keys()]
         self.runtest(
             select(
                 [s],
@@ -92,10 +94,9 @@ myothertable.othername FROM mytable, myothertable")
             "SELECT myid, name, description FROM (SELECT mytable.myid AS myid, mytable.name AS name, mytable.description AS description FROM mytable)"
         )
         
-        sq = subquery(
-            'sq',
+        sq = select(
             [table1],
-        )
+        ).alias('sq')
 
         self.runtest(
             sq.select(sq.c.myid == 7), 
@@ -103,12 +104,11 @@ myothertable.othername FROM mytable, myothertable")
 (SELECT mytable.myid AS myid, mytable.name AS name, mytable.description AS description FROM mytable) AS sq WHERE sq.myid = :sq_myid"
         )
         
-        sq = subquery(
-            'sq',
+        sq = select(
             [table1, table2],
             and_(table1.c.myid ==7, table2.c.otherid==table1.c.myid),
             use_labels = True
-        )
+        ).alias('sq')
         
         sqstring = "SELECT mytable.myid AS mytable_myid, mytable.name AS mytable_name, \
 mytable.description AS mytable_description, myothertable.otherid AS myothertable_otherid, \
@@ -118,19 +118,75 @@ WHERE mytable.myid = :mytable_myid AND myothertable.otherid = mytable.myid"
         self.runtest(sq.select(), "SELECT sq.mytable_myid, sq.mytable_name, sq.mytable_description, sq.myothertable_otherid, \
 sq.myothertable_othername FROM (" + sqstring + ") AS sq")
 
-        sq2 = subquery(
-            'sq2',
+        sq2 = select(
             [sq],
             use_labels = True
-        )
+        ).alias('sq2')
 
         self.runtest(sq2.select(), "SELECT sq2.sq_mytable_myid, sq2.sq_mytable_name, sq2.sq_mytable_description, \
 sq2.sq_myothertable_otherid, sq2.sq_myothertable_othername FROM \
 (SELECT sq.mytable_myid AS sq_mytable_myid, sq.mytable_name AS sq_mytable_name, \
 sq.mytable_description AS sq_mytable_description, sq.myothertable_otherid AS sq_myothertable_otherid, \
 sq.myothertable_othername AS sq_myothertable_othername FROM (" + sqstring + ") AS sq) AS sq2")
+
+    def testwheresubquery(self):
+        self.runtest(
+            table1.select(table1.c.myid == select([table2.c.otherid], table1.c.name == table2.c.othername)),
+            "SELECT mytable.myid, mytable.name, mytable.description FROM mytable WHERE mytable.myid = (SELECT myothertable.otherid AS otherid FROM myothertable WHERE mytable.name = myothertable.othername)"
+        )
+
+        self.runtest(
+            table1.select(exists([1], table2.c.otherid == table1.c.myid)),
+            "SELECT mytable.myid, mytable.name, mytable.description FROM mytable WHERE EXISTS (SELECT 1 FROM myothertable WHERE myothertable.otherid = mytable.myid)"
+        )
+
+        talias = table1.alias('ta')
+        s = subquery('sq2', [talias], exists([1], table2.c.otherid == talias.c.myid))
+        self.runtest(
+            select([s, table1])
+            ,"SELECT sq2.myid, sq2.name, sq2.description, mytable.myid, mytable.name, mytable.description FROM (SELECT ta.myid AS myid, ta.name AS name, ta.description AS description FROM mytable AS ta WHERE EXISTS (SELECT 1 FROM myothertable WHERE myothertable.otherid = ta.myid)) AS sq2, mytable")
+
+        s = select([addresses.c.street], addresses.c.user_id==users.c.user_id, correlate=True).alias('s')
+        self.runtest(
+            select([users, s.c.street], from_obj=[s]),
+            """SELECT users.user_id, users.user_name, users.password, s.street FROM users, (SELECT addresses.street AS street FROM addresses WHERE addresses.user_id = users.user_id) AS s""")
         
+    def testcolumnsubquery(self):
+        s = select([table1.c.myid], scalar=True, correlate=False)
+        self.runtest(select([table1, s]), "SELECT mytable.myid, mytable.name, mytable.description, (SELECT mytable.myid AS myid FROM mytable) FROM mytable")
+
+        s = select([table1.c.myid], scalar=True)
+        self.runtest(select([table2, s]), "SELECT myothertable.otherid, myothertable.othername, (SELECT mytable.myid AS myid FROM mytable) FROM myothertable")
         
+
+        zips = table('zips',
+            column('zipcode'),
+            column('latitude'),
+            column('longitude'),
+        )
+        places = table('places',
+            column('id'),
+            column('nm')
+        )
+        zip = '12345'
+        qlat = select([zips.c.latitude], zips.c.zipcode == zip, scalar=True, correlate=False)
+        qlng = select([zips.c.longitude], zips.c.zipcode == zip, scalar=True, correlate=False)
+ 
+        q = select([places.c.id, places.c.nm, zips.c.zipcode, func.latlondist(qlat, qlng).label('dist')],
+                         zips.c.zipcode==zip,
+                         order_by = ['dist', places.c.nm]
+                         )
+
+        self.runtest(q,"SELECT places.id, places.nm, zips.zipcode, latlondist((SELECT zips.latitude AS latitude FROM zips WHERE zips.zipcode = :zips_zipcode_1), (SELECT zips.longitude AS longitude FROM zips WHERE zips.zipcode = :zips_zipcode_2)) AS dist FROM places, zips WHERE zips.zipcode = :zips_zipcode ORDER BY dist, places.nm")
+        
+        zalias = zips.alias('main_zip')
+        qlat = select([zips.c.latitude], zips.c.zipcode == zalias.c.zipcode, scalar=True)
+        qlng = select([zips.c.longitude], zips.c.zipcode == zalias.c.zipcode, scalar=True)
+        q = select([places.c.id, places.c.nm, zalias.c.zipcode, func.latlondist(qlat, qlng).label('dist')],
+                         order_by = ['dist', places.c.nm]
+                         )
+        self.runtest(q, "SELECT places.id, places.nm, main_zip.zipcode, latlondist((SELECT zips.latitude AS latitude FROM zips WHERE zips.zipcode = main_zip.zipcode), (SELECT zips.longitude AS longitude FROM zips WHERE zips.zipcode = main_zip.zipcode)) AS dist FROM places, zips AS main_zip ORDER BY dist, places.nm")
+            
     def testand(self):
         self.runtest(
             select(['*'], and_(table1.c.myid == 12, table1.c.name=='asdf', table2.c.othername == 'foo', "sysdate() = today()")), 
@@ -410,27 +466,6 @@ FROM mytable, myothertable WHERE mytable.myid = myothertable.otherid AND mytable
         c = s.compile(parameters = {'test' : 7}, engine=db)
         self.assert_(c.get_params() == {'test' : 7})
 
-    def testcorrelatedsubquery(self):
-        self.runtest(
-            table1.select(table1.c.myid == select([table2.c.otherid], table1.c.name == table2.c.othername)),
-            "SELECT mytable.myid, mytable.name, mytable.description FROM mytable WHERE mytable.myid = (SELECT myothertable.otherid AS otherid FROM myothertable WHERE mytable.name = myothertable.othername)"
-        )
-
-        self.runtest(
-            table1.select(exists([1], table2.c.otherid == table1.c.myid)),
-            "SELECT mytable.myid, mytable.name, mytable.description FROM mytable WHERE EXISTS (SELECT 1 FROM myothertable WHERE myothertable.otherid = mytable.myid)"
-        )
-
-        talias = table1.alias('ta')
-        s = subquery('sq2', [talias], exists([1], table2.c.otherid == talias.c.myid))
-        self.runtest(
-            select([s, table1])
-            ,"SELECT sq2.myid, sq2.name, sq2.description, mytable.myid, mytable.name, mytable.description FROM (SELECT ta.myid AS myid, ta.name AS name, ta.description AS description FROM mytable AS ta WHERE EXISTS (SELECT 1 FROM myothertable WHERE myothertable.otherid = ta.myid)) AS sq2, mytable")
-
-        s = select([addresses.c.street], addresses.c.user_id==users.c.user_id, correlate=True).alias('s')
-        self.runtest(
-            select([users, s.c.street], from_obj=[s]),
-            """SELECT users.user_id, users.user_name, users.password, s.street FROM users, (SELECT addresses.street AS street FROM addresses WHERE addresses.user_id = users.user_id) AS s""")
 
     def testin(self):
         self.runtest(select([table1], table1.c.myid.in_(1, 2, 3)),
